Updated DTO lib